syntax = "proto3";

package com.linbit.linstor.proto.javainternal.c2s;

// Internal message indicating that a requested external file is no longer registered in the controller
message MsgIntExternalFileDeletedData
{
    string external_file_name   = 1;
    sint64 full_sync_id         = 2;
    sint64 update_id            = 3;
}
